* class-Zone/ZoneStore - extend with virtual-wire
* class-VirtualWire/VirtualWireStore - extend validation
* class-InterfaceContainer - extend validation for addInterface - improve API_addInterface
* class-EthernetInterface/EthernetIfStore - extend with ae information - extend validation
* class-Zone - reduce warning if not yet supported in pan-c framework

utils:
address-edit: improvement for actions=decommisssion - extend interface (ethernet/vlan/loopback/tunnel) with add/removeIPv4address


bugfix:
- fix class-IpsecTunnel | related to proxy-id if <protocol> is not available
- fix class-EthernetInterfaceStore | xpath fix
- fix implementation of class-AggregateEthernetInterface
- fix class-VirtualSystem | no warning if IPv4 address without netmask is used as interface IP


1.5.14 (20180227)
* class PanAPIConnector : added support for installed app/av/wildfire/threat-version / PA-VM uuid / cpuid
* new class IkeCryptoProfile; IkeCryptoProfileStore; IPSecCryptoProfil; IPSecCryptoProfilStore
* class PanAPIConnector : added support for device uptime
* update predefined.xml to 8020-4723
* new class ServiceSrcPortMapping
* class-AddressGroup - implement method hasGroupinGroup and getGroupNamerecursive
* class-IPsecTunnel - extend with more validation and warnings
* class-NatRule.php - introduce method API_setNoSNAT / API_setNoDNAT
* new class AuthenticationRule : bring in PAN-OS 8.0 change from CaptivePortalRule to AuthenticationRule

utils:
rules-edit: new action dsri-set:[bool], dsri-Set-FastAPI:[bool] => default value is false
rules-edit: action 'display' extend with DSRI information, if "Disable Server Response Inspection" is enabled for security rule
rules-edit: action'nameRename' extend for additional variable usage like $$current.name$$ and $$sequential.number$$
rules-edit: new action 'app-Fix-Dependencies' to display missing dependencies, with additional argument 'app-Fix-Dependencies:yes' all missing app-id dependencies are added